
noinst_PROGRAMS = ccf_demo ccf_diff col_demo col_reformat

noinst_HEADERS =		\
	CommentedConfigFile.h	\
	ColumnConfigFile.h	\
	Diff.cc


ccf_demo_SOURCES =		\
	ccf_demo_main.cc	\
	CommentedConfigFile.cc  \
	Diff.cc

ccf_diff_SOURCES =		\
	ccf_diff_main.cc	\
	Diff.cc


col_demo_SOURCES =		\
	col_demo_main.cc	\
	CommentedConfigFile.cc	\
	ColumnConfigFile.cc	\
	Diff.cc


col_reformat_SOURCES =		\
	col_reformat_main.cc	\
	CommentedConfigFile.cc	\
	ColumnConfigFile.cc	\
	Diff.cc

